# vikaa-ai-learning

./: .env.example  .gitignore  =1.0.0  Project.md  README.md  TITLE of the Application.docx  index.html  main.py  mock_prompt.md  pyproject.toml  render.yaml  requirement_prompt.md  requirements.txt  response_prompt.md  run.py  schema.sql  start.bat
.claude/: settings.local.json
_Databricks_GenAI_MCQ/: PROJECT_WORK.txt  README.md  appMCQ.py  appScenario.py  app_combined.py  hello_databricks.py  requirements.txt  scenarios.json  scenarios_updated.json
_Databricks_GenAI_MCQ/mcq_exam_app/: app.py  mcqs.json
_Databricks_GenAI_MCQ/scenario_app/: app.py  app1111.py
backend/: config.json  config.py  db.py  llm.py  main.py  question_bank.json  question_gen.py  schema.sql
backend/routers/: analytics.py  databricks_mcq.py  duk.py  interview.py  questions.py  sessions.py  users.py
frontend/: index.html  information.txt
