[project]
name = "vikaa-ai-learning"
version = "0.1.0"
description = "A project for AI learning and development."
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = []
requires-python = ">=3.8"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
